src/pages/Inventory/index.css
:root {
    --primary-color-1: #0D2167;
    --primary-color-2: #5A6793;
    --secondary-color-1: #C6CCE0;
}
h1 {
    font-size: 2.4rem;
    color: var(--primary-color-1);
}
p {
    font-size: 1.6rem;
    color: var(--primary-color-2);
}
/*Manage Area*/
.manageArea {
    font-size: 80%;
    max-width: 1400px;
    margin: 0 auto;
    margin-top: 8rem;
    border-bottom: 2px dotted #ccc;
}
.manageArea__option {
    background-color: transparent;
    justify-content: flex-start;
    align-items: center;
    padding: 0;
    width: 100%;
    display: flex;
    flex-direction: row;
    list-style: none;
    border-bottom: 1px #ccc solid;
    padding-left: 30px;
}
.manageArea__option li {
    background-color: white;
    z-index: 10;
    transform: translateY(2px);
    padding: 10px 5px;
    border: 2px solid #ccc;
    border-bottom: transparent;
    border-radius: 3px;
}
.manageArea__option li:nth-child(1) {
    border-right: 0;
}
.manageArea__option a {
    cursor: pointer;
    margin-left: 2rem;
    margin-right: 5rem;
    color: var(--secondary-color-1);
    text-decoration: none;
}
.active {
    color: var(--primary-color-1) !important;
}
.manageArea__option a:hover {
    color: var(--primary-color-1);
}
/*----AddNew----*/
.addNew {
    text-align: center;
    display: flex;
    flex-direction: column;
}
.addNew__content {
    margin-top: 5rem;
    margin-bottom: 5rem;
    display: flex;
}
.addNew__img {
    align-items: center;
    display: flex;
    flex-direction: column;
    flex: 1;
}
.addNew__img img {
    margin-top: 3rem;
    width: 200px;
    height: 300px;
    object-fit: cover;
}

.addNew__info {
    padding: 0 10rem;
    min-width: 30%;
    min-height: 250px;
    height: 100%;
    justify-content: space-evenly;
    align-items: flex-start;
    display: flex;
    flex-direction: column;
    border-left: 1px dotted var(--primary-color-2);
}
.addNew__info button {
    margin-left: 50%;
    transform: translateX(-50%);
}
.info-item {
    display: flex;
}
.info-item label {
    margin-right: 2rem;
}
@media screen and (max-width: 800px) {
    .addNew__info {
        padding: 0 20px;
        font-size: 70%;
        max-width: 0px;
    }
}   
@media screen and (max-width: 800px) {
    .addNew__content {
        flex-direction: column;
        justify-items: center;
    }
    .addNew__info {
        align-items: center;
        max-width: 100%;
        width: 100%;
    }
}
/*BookGrid*/
.bookGrid {
    margin: 0 auto;
    max-width: 1200px;
    display: grid;
    gap: 5rem 7rem;
    grid-template-columns: repeat(3, minmax(300px, 1fr));
}
.bookGrid__item {
    width: 100%;
}
@media screen and (max-width: 1000px) {
    .bookGrid {
        gap: 2rem 3rem;
        padding: 0 1rem;
        grid-template-columns: repeat(2, minmax(250px, 1fr));
    }
}
@media screen and (max-width: 500px) {
    .bookGrid {
        grid-template-columns: repeat(1, minmax(250px, 1fr));
    }
}
/*Book Card*/
.bookCard {
    border-radius: 5px;
    box-shadow: 0 0 15px 2px #ddd;
    text-align: center;
    padding: 20px;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.bookCard h3 {
    text-transform: capitalize;
    color: var(--primary-color-2);
}
.bookCard img {
    height: 200px;
    width: 150px;
    object-fit: cover;
    margin-bottom: 2rem;
}
.bookCard__author {
    font-size: 1.6rem;
    margin-bottom: 1.5rem;
}
.bookCard__description {
    font-size: 1.5rem;
}
.bookCard__btn {
    color: var(--primary-color-2);
    cursor: pointer;
    margin-top: 3rem;
    padding: 5px 10px;
    border: 0;
    border-radius: 3px;
    background-color: var(--secondary-color-1);
}
.bookCard__btn:hover {
    background-color: lightcoral;
    color: var(--primary-color-1)
}

@media screen and (max-width: 425px) {
    .bookCard__description {
        font-size: 1.2rem;
    }
}
/*----Sort Area----*/
.sortArea {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}
.sortArea h2 {
    font-weight: 600;
    margin: 1rem 0;
}
.sortArea .sortArea__type {
    flex-direction: column;
}

